syntax = "proto3";
package email;
option java_multiple_files = true;
option java_package = "com.email.grpc";
option java_outer_classname = "EmailProto";
service EmailService {
  rpc SendEmail (SendEmailRequest) returns (SendEmailResponse);
}

message SendEmailRequest {
  string email = 1;
  string username = 2;
}

message SendEmailResponse {
  bool success = 1;
  string message = 2;
}
